package com.github.gustavobarbosab.androidcourse.ui.screen.login.screen.model

object LoginTestTags {
    const val USERNAME_FIELD = "LOGIN_USERNAME_FIELD"
    const val PASSWORD_FIELD = "LOGIN_PASSWORD_FIELD"
    const val LOGIN_BUTTON = "LOGIN_BUTTON"
}